# environments

./: pyproject.toml
environments/base64bench/: README.md  base64bench.py  check_max_tokens.py  eval.jsonl  pyproject.toml  train.jsonl
environments/base64bench/outputs/evals/base64bench--Qwen--Qwen2.5-Coder-32B-Instruct/e268ed77/: metadata.json  results.jsonl
environments/base64bench/outputs/evals/base64bench--Qwen--Qwen3-4B-Instruct-2507/9efb9bc3/: metadata.json  results.jsonl
environments/base64bench/outputs/evals/base64bench--Qwen--Qwen3-4B-Thinking-2507/d886c7c2/: metadata.json
environments/pira/: .env-metadata.json  README.md  pira.py  pyproject.toml
environments/pira/outputs/evals/pira--Qwen--Qwen2.5-Coder-32B-Instruct/4ef046bb/: metadata.json  results.jsonl
environments/pira/outputs/evals/pira--Qwen--Qwen3-4B-Instruct-2507/8470cc99/: metadata.json  results.jsonl
environments/porsimples/: .env-metadata.json  README.md  porsimples.py  pyproject.toml
environments/porsimples/outputs/evals/porsimples--Qwen--Qwen2.5-Coder-32B-Instruct/8a3d30da/: metadata.json  results.jsonl
environments/porsimples/outputs/evals/porsimples--Qwen--Qwen3-4B-Instruct-2507/35cccd94/: metadata.json  results.jsonl
