[project]
name = "pira"
description = "Verifiers environment for Portuguese generative Question-Answering (PIRA)."
tags = ["portuguese", "question-answering", "qa", "train", "eval"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.5.post0",
    "evaluate",
    "datasets",
    "rouge_score",
    "sacrebleu",
    "nltk"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"